--- a/src/components/requests/requests.scss
+++ b/src/components/requests/requests.scss
@@ -1,74 +1,76 @@
-.requests{
-    width: 100%;
- 
-    text-align: center;
+.requests {
+  width: 100%;
+
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  position: relative;
+  .emps {
+    position: absolute;
+    background-color: rgb(221, 211, 211);
+    left: 50%;
+    top: 50%;
+    // translate: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
+    padding: 15px;
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
+    width: 50%;
     gap: 20px;
-    position: relative;
-    .emps{
-        position: absolute;
-        background-color: rgb(221, 211, 211);
-        left: 50%;
-        top: 50%;
-        // translate: translate(-50%,-50%);
-        transform: translate(-50%,-50%);
-        padding: 15px;
-        border-radius: 10px;
-        display: flex;
-        flex-direction: column;
-        width: 50%;
-        gap: 20px;
-        border: 6px solid var(--clr-pumpkin);
-        .emp{
-            width: 70%;
-            max-width: auto;
-            background-color: white;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: 0.2s;
-            padding: 10px;
-            margin: auto;
-        }
-        .emp-active{
-            background-color: rgb(88, 88, 255);
-            color: white;
-        }
-        button{
-            background-color: rgb(0, 223, 56);
-            color: white;
-            font-size: 22px;
-            cursor: pointer;
-            padding: 5px 15px;
-            width: fit-content;
-            margin: auto;border-radius: 6px;
-            transition: 0.2s;
-            &:hover{
-                background-color: rgb(0, 223, 56);
-                transform: scale(1.1);
-            }
-        }
-
+    border: 6px solid var(--clr-pumpkin);
+    .emp {
+      width: 70%;
+      max-width: auto;
+      background-color: white;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: 0.2s;
+      padding: 10px;
+      margin: auto;
     }
-    h1{
-        color: white;
+    .emp-active {
+      background-color: rgb(88, 88, 255);
+      color: white;
     }
-    .bachelor,.master,.phd{
-background-color: rgba(255, 255, 255, 0.562);
-width: 90%;
-margin: auto;
-padding: 15px 10px;
-border-radius: 8px;
-border: 3px solid var(--clr-pumpkin);
-h2{
-    text-transform: capitalize;
-}
-.req-container{
-    display: flex;
-    justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
-    .request{
+    button {
+      background-color: rgb(0, 223, 56);
+      color: white;
+      font-size: 22px;
+      cursor: pointer;
+      padding: 5px 15px;
+      width: fit-content;
+      margin: auto;
+      border-radius: 6px;
+      transition: 0.2s;
+      &:hover {
+        background-color: rgb(0, 223, 56);
+        transform: scale(1.1);
+      }
+    }
+  }
+  h1 {
+    color: white;
+  }
+  .bachelor,
+  .master,
+  .phd {
+    background-color: rgba(255, 255, 255, 0.562);
+    width: 90%;
+    margin: auto;
+    padding: 15px 10px;
+    border-radius: 8px;
+    border: 3px solid var(--clr-pumpkin);
+    h2 {
+      text-transform: capitalize;
+    }
+    .req-container {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      flex-wrap: wrap;
+      .request {
         background-color: white;
         padding: 10px;
         border-radius: 5px;
@@ -76,23 +78,22 @@ h2{
         display: flex;
         flex-direction: column;
         gap: 10px;
-        button{
-            background-color: rgb(92, 206, 92);
-            padding: 5px 10px;
-            color: white;
-            cursor: pointer;
-            border-radius: 4px;
+        button {
+          background-color: rgb(92, 206, 92);
+          padding: 5px 10px;
+          color: white;
+          cursor: pointer;
+          border-radius: 4px;
         }
-        a{
-            background-color: var(--clr-pumpkin);
-            padding: 5px 10px;
-            color: white;
-            cursor: pointer;
-            border-radius: 4px;}
-            text-transform: capitalize;
+        a {
+          background-color: var(--clr-pumpkin);
+          padding: 5px 10px;
+          color: white;
+          cursor: pointer;
+          border-radius: 4px;
+        }
+        text-transform: capitalize;
+      }
     }
-}
-
-
-    }
+  }
 }
