--- a/src/components/requests/requests.css
+++ b/src/components/requests/requests.css
@@ -6,12 +6,23 @@
   gap: 20px;
   position: relative;
 }
+.requests .emps-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
+  cursor: pointer;
+}
 .requests .emps {
-  position: absolute;
   background-color: rgb(221, 211, 211);
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  cursor: auto;
   padding: 15px;
   border-radius: 10px;
   display: flex;
