--- a/src/components/requests/requests.scss
+++ b/src/components/requests/requests.scss
@@ -6,13 +6,22 @@
   flex-direction: column;
   gap: 20px;
   position: relative;
+  .emps-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    backdrop-filter: blur(5px);
+    cursor: pointer;
+  }
   .emps {
-    position: absolute;
     background-color: rgb(221, 211, 211);
-    left: 50%;
-    top: 50%;
-    // translate: translate(-50%,-50%);
-    transform: translate(-50%, -50%);
+    cursor: auto;
     padding: 15px;
     border-radius: 10px;
     display: flex;
