--- a/src/App.css
+++ b/src/App.css
@@ -660,3 +660,65 @@ z-index: 100;
 .banter-loader__box:nth-child(9) {
   animation: moveBox-9 4s infinite;
 }
+.table-container {
+  max-width: 100%;
+  overflow: auto;
+}
+table {
+  width: 100%;
+}
+table thead {
+  background-color: gray;
+}
+table thead tr th {
+  text-align: center;
+  font-weight: 700;
+  padding: 20px;
+}
+tbody tr td {
+  padding: 15px;
+}
+table tbody tr{
+  background-color: gray;
+  text-align: center;
+  font-weight: 600;
+}
+table tbody tr.pending{
+  background-color: greenyellow;
+}
+table tbody tr.noEmp{
+  background-color: skyblue;
+}
+
+table td.buttons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+table a,table button {
+  background-color: #fe6c00;
+  color: white;
+  font-weight: 600;
+  font-size: 16px;
+  padding: 5px 15px ;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  transition: .5s ease;
+  -webkit-transition: .5s ease;
+  -moz-transition: .5s ease;
+  -ms-transition: .5s ease;
+  -o-transition: .5s ease;
+}
+table a:hover,table button:hover{
+  background-color: #29221d;
+}
+h2{
+  font-size: 30px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: white;
+}
