--- a/src/components/request-card/request.css
+++ b/src/components/request-card/request.css
@@ -53,9 +53,9 @@
   padding: 8px;
   border-radius: 6px;
   transition: 0.2s;
-}
-.request-card .container .details .req-details a:hover,
-.request-card .container .details .user-details a:hover {
   background-color: white;
   color: black;
+}
+.request-card .container .details.done {
+  border: 4px solid green;
 }/*# sourceMappingURL=request.css.map */
