--- a/src/components/request-card/request.scss
+++ b/src/components/request-card/request.scss
@@ -46,12 +46,13 @@
           padding: 8px;
           border-radius: 6px;
           transition: 0.2s;
-          &:hover {
-            background-color: white;
-            color: black;
-          }
+          background-color: white;
+          color: black;
         }
       }
+    }
+    .details.done {
+      border: 4px solid green;
     }
   }
 }
