--- a/src/components/ContentTop/ContentTop.css
+++ b/src/components/ContentTop/ContentTop.css
@@ -31,3 +31,22 @@
   display: flex;
   align-items: center;
 }
+.notification {
+  position: relative;
+}
+.notification img {
+  width: 25px;
+}
+.notification .not-read {
+  position: absolute;
+  top: -20px;
+  right: -20px;
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 600;
+  border-radius: 50%;
+  background-color: red;
+}
