--- a/src/App.css
+++ b/src/App.css
@@ -163,7 +163,7 @@ left: 0;
 width: 100%;
 height: 100%;
 background-color: #0000008a;
-z-index: 100;
+z-index: 1000;
 }
 
 .banter-loader {
@@ -765,4 +765,48 @@ h2{
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
   border: 1px solid #fe6c00;
-} */
+} */.confirm {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.781);
+  text-align: center;
+  padding: 15px;
+  border-radius: 10px;
+  z-index: 120;
+  min-width: 50%;
+  max-width: 90%;
+  max-height: 80%;
+    overflow-y: auto;
+}
+.confirm .confirm{
+  z-index: 130;
+}
+.confirm .btns {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  margin-top: 25px;
+}
+.confirm .btns button {
+  width: 40%;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 17px;
+  color: white;
+}
+.confirm .btns .yes {
+  background-color: red;
+}
+.confirm .btns .no {
+  background-color: green;
+}
+.quill{
+  background-color: white;
+  color: black;
+}
+.quill .ql-editor{
+  min-height: 200px;
+}
