--- a/src/components/request-card/request.scss
+++ b/src/components/request-card/request.scss
@@ -43,12 +43,11 @@
           border-radius: 6px;
         }
         a {
-          border: 2px solid white;
+          color: #fff;
           padding: 8px;
           border-radius: 6px;
           transition: 0.2s;
-          background-color: white;
-          color: black;
+          background-color: #fe6c00;
         }
       }
     }
