--- a/src/components/request-card/request.css
+++ b/src/components/request-card/request.css
@@ -49,12 +49,11 @@
 }
 .request-card .container .details .req-details a,
 .request-card .container .details .user-details a {
-  border: 2px solid white;
+  color: #fff;
   padding: 8px;
   border-radius: 6px;
   transition: 0.2s;
-  background-color: white;
-  color: black;
+  background-color: #fe6c00;
 }
 .request-card .container .details.done {
   border: 4px solid green;
